force-app/main/default/objects/Calendar_Build_Error_Log__c/Calendar_Build_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Junction object between Calendar Build Log and Error Log - created as part of HRP-12706</description>
    <label>Calendar Build Error Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Build Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>