force-app/main/default/objects/Calendar_Build_Error_Log__c/fields/BSF_Error_Log__c.field-meta.xml
<CustomField>
    <fullName>BSF_Error_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BSF Error Log</label>
    <referenceTo>BSF_Error_Log__c</referenceTo>
    <relationshipLabel>Calendar Build Error Logs</relationshipLabel>
    <relationshipName>Calendar_Build_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>