force-app/main/default/objects/Calendar_Build_Error_Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive Status Correction</fullName>
            </value>
            <value>
                <fullName>Calendar Build</fullName>
            </value>
            <value>
                <fullName>Drive Generation</fullName>
            </value>
            <value>
                <fullName>Sys Gen Run - FS</fullName>
            </value>
            <value>
                <fullName>Sys Gen Run - Mobile</fullName>
            </value>
            <value>
                <fullName>Sys Gen Run - FS Business Error</fullName>
            </value>
            <value>
                <fullName>Sys Gen Run - Mobile Business Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>