force-app/main/default/objects/Calendar_Build_Error_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Calendar Build Error Logs</relationshipLabel>
    <relationshipName>Calendar_Build_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>